# slmforge_3

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  slmforge.db
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
.pre-commit-cache/: db.db
alembic/: env.py
alembic/versions/: 95ec140c902c_initial_schema.py
src/slmforge/api/: db.py  main.py  schemas.py
src/slmforge/api/routes/: builds.py
src/slmforge/cli/: main.py
src/slmforge/engine/: state.py
tests/: test_builds.py
tests/unit/: test_builds.py  test_health.py  test_models.py
