[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slmforge"
version = "0.0.1"
description = "Plug-and-play SLM builder. CLI + localhost web UI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "NST Engineering"}]

dependencies = [
    "transformers>=4.44",
    "peft>=0.12",
    "datasets>=2.20",
    "accelerate>=0.33",
    "torch>=2.3",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "rq>=1.16",
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=16.0",
    "python-magic>=0.4.27",
    "faiss-cpu>=1.8",
    "sacrebleu>=2.4",
    "rouge-score>=0.1.2",
]

[project.scripts]
slmforge = "slmforge.cli.main:app"

[project.optional-dependencies]
serve = ["vllm>=0.5"]
quant = ["bitsandbytes>=0.43"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "black>=24.4",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
